--- a/appcordova/www/mahasiswa.html
+++ b/appcordova/www/mahasiswa.html
@@ -10,13 +10,43 @@
     Mahasiswa | @adhamhayukalbu
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-  <!--     Fonts and icons     -->
+  <!-- Fonts and icons -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
   <link href="assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="assets/demo/demo.css" rel="stylesheet" />
+  <script type="text/javascript">
+    $(document).ready(function() {
+        $("#insert").click(function() {
+            var nim = $("#nim").val();
+            var name = $("#name").val();
+            var jurusan_id = $("#jurusan").val();
+            var dataString = "nim=" + nim + "&name=" + name + "&jurusan=" + jurusan_id + "";
+            if ($.trim(title).length > 0 & $.trim(duration).length > 0 & $.trim(price).length > 0) {
+                $.ajax({
+                    type: "POST",
+                    url: "https://dapoerdevelopment.000webhostapp.com/php-code/insert.php",
+                    data: dataString,
+                    crossDomain: true,
+                    cache: false,
+                    beforeSend: function() {
+                        $("#insert").val('Connecting...');
+                    },
+                    success: function(data) {
+                        if (data == "success") {
+                            alert("inserted");
+                            $("#insert").val('submit');
+                        } else if (data == "error") {
+                            alert("error");
+                        }
+                    }
+                });
+            }
+            return false;
+        });
+    });
+    </script>
 </head>
 
 <body class="">
@@ -118,13 +148,13 @@
                             <div class="col-md-6">
                             <div class="form-group">
                                 <label class="bmd-label-floating">NIM</label>
-                                <input type="text" class="form-control" disabled>
+                                <input id="nim" type="text" class="form-control">
                             </div>
                             </div>
                             <div class="col-md-6">
                             <div class="form-group">
                                 <label class="bmd-label-floating">Nama Lengkap</label>
-                                <input type="text" class="form-control">
+                                <input id="name" type="text" class="form-control">
                             </div>
                             </div>
                         </div>
@@ -132,11 +162,11 @@
                             <div class="col-md-12">
                             <div class="form-group">
                                 <label class="bmd-label-floating">Jurusan</label>
-                                <input type="text" class="form-control">
+                                <input id="jurusan" type="text" class="form-control">
                             </div>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-info pull-right">Save</button>
+                        <button id="insert" type="submit" class="btn btn-info pull-right">Save</button>
                         <div class="clearfix"></div>
                     </form>
                 </div>
