--- a/appcordova/www/dosen.html
+++ b/appcordova/www/dosen.html
@@ -30,7 +30,7 @@
       <div class="sidebar-wrapper">
         <ul class="nav">
           <li class="nav-item ">
-            <a class="nav-link" href="./dashboard.html">
+            <a class="nav-link" href="./index.html">
               <i class="material-icons">dashboard</i>
               <p>All</p>
             </a>
