--- a/appcordova/www/mahasiswa.html
+++ b/appcordova/www/mahasiswa.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
   <link href="assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
-  <link href="assets/demo/demo.css" rel="stylesheet" />
+  <!-- <link href="assets/demo/demo.css" rel="stylesheet" /> -->
   <script type="text/javascript">
     $(document).ready(function() {
         $("#insert").click(function() {
@@ -225,7 +225,7 @@
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-  <script src="assets/demo/demo.js"></script>
+  <!-- <script src="assets/demo/demo.js"></script> -->
   <script>
     $(document).ready(function() {
       // Javascript method's body can be found in assets/js/demos.js
