--- a/appcordova/www/index.html
+++ b/appcordova/www/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
@@ -14,19 +13,114 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
-  <link href="assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <!-- <link href="assets/demo/demo.css" rel="stylesheet" /> -->
+  <link href="assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet"/>
+  <!--   Core JS Files   -->
+  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <!-- <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script> -->
+  <script src="assets/js/material-dashboard.min.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      var url_mahasiswa = "http://172.16.4.245/web-services/php-code/controllers/mahasiswa_controller.php?action=read";
+      $.getJSON(url_mahasiswa, function(result) {
+          console.log(result);
+          $.each(result, function(i, field) {
+              var nim = field.nim;
+              var nama = field.nama;
+              var alamat = field.alamat;
+              var id_jurusan = field.jurusan_id;
+              var display_name = nim + " / " + nama + " / " + id_jurusan;
+              var table_body_str = '<tr><td><div class="form-check">\n'+
+                '<label class="form-check-label">\n'+
+                  '<input class="form-check-input" type="checkbox" value="">\n'+
+                  '<span class="form-check-sign">\n'+
+                  '<span class="check"></span></span>\n'+
+                '</label>\n'+
+                '</div>\n'+
+                '</td>\n'+
+                '<td>' + display_name + '</td>\n'+
+                '<td class="td-actions text-right">\n'+
+                '<button type="button" rel="tooltip" title="Edit" class="btn btn-primary btn-link btn-sm">\n'+
+                '<i class="material-icons">edit</i>\n'+
+                '</button>\n'+
+                '<button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">\n'+
+                '<i class="material-icons">close</i>\n'+
+                '</button>\n'+
+                '</td>\n'+
+                '</tr>'
+              $("#mhs_list_view").append(table_body_str);
+          });
+      });
+      var url_dosen = "http://172.16.4.245/web-services/php-code/controllers/dosen_controller.php?action=read";
+      $.getJSON(url_dosen, function(result) {
+          console.log(result);
+          $.each(result, function(i, field) {
+              var nid = field.nid;
+              var nama = field.nama;
+              var alamat = field.alamat;
+              var id_jurusan = field.jurusan_id;
+              var display_name = nid + " / " + nama + " / " + id_jurusan;
+              var table_body_str = '<tr><td><div class="form-check">\n'+
+                '<label class="form-check-label">\n'+
+                '<input class="form-check-input" type="checkbox" value="">\n'+
+                '<span class="form-check-sign">\n'+
+                '<span class="check"></span></span>\n'+
+                '</label>\n'+
+                '</div>\n'+
+                '</td>\n'+
+                '<td>' + display_name +
+                '</td>\n'+
+                '<td class="td-actions text-right">\n'+
+                '<button type="button" rel="tooltip" title="Edit" class="btn btn-primary btn-link btn-sm">\n'+
+                '<i class="material-icons">edit</i>\n'+
+                '</button>\n'+
+                '<button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">\n'+
+                '<i class="material-icons">close</i>\n'+
+                '</button>\n'+
+                '</td>\n'+
+                '</tr>'
+              $("#dsn_list_view").append(table_body_str);
+          });
+      });
+      var url_matakuliah = "http://172.16.4.245/web-services/php-code/controllers/matakuliah_controller.php?action=read";
+      $.getJSON(url_matakuliah, function(result) {
+          console.log(result);
+          $.each(result, function(i, field) {
+              var reference = field.reference;
+              var nama = field.nama;
+              var sks = field.sks;
+              var id_jurusan = field.jurusan_id;
+              var display_name = reference + " / " + nama + " / " + sks + " / " + id_jurusan;
+              var table_body_str = '<tr><td><div class="form-check">\n'+
+                '<label class="form-check-label">\n'+
+                '<input class="form-check-input" type="checkbox" value="">\n'+
+                '<span class="form-check-sign">\n'+
+                '<span class="check"></span></span>\n'+
+                '</label>\n'+
+                '</div>\n'+
+                '</td>\n'+
+                '<td>' + display_name +
+                '</td>\n'+
+                '<td class="td-actions text-right">\n'+
+                '<button type="button" rel="tooltip" title="Edit" class="btn btn-primary btn-link btn-sm">\n'+
+                '<i class="material-icons">edit</i>\n'+
+                '</button>\n'+
+                '<button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">\n'+
+                '<i class="material-icons">close</i>\n'+
+                '</button>\n'+
+                '</td>\n'+
+                '</tr>'
+              $("#matkul_list_view").append(table_body_str);
+          });
+      });
+    });
+  </script>
 </head>
 
 <body class="">
   <div class="wrapper ">
     <div class="sidebar" data-color="azure" data-background-color="white" data-image="assets/img/sidebar-1.jpg">
-      <!--
-        Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
-
-        Tip 2: you can also add an image using data-image tag
-    -->
       <div class="logo">
         <a href="https://github.com/adhamhayukalbu/" class="simple-text logo-normal">
           @adhamhayukalbu
@@ -47,29 +141,17 @@
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./tables.html">
+            <a class="nav-link" href="./dosen.html">
               <i class="material-icons">person</i>
               <p>Dosens</p>
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./typography.html">
+            <a class="nav-link" href="./mata_kuliah.html">
               <i class="material-icons">library_books</i>
               <p>Mata Kuliahs</p>
             </a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./icons.html">
-              <i class="material-icons">content_paste</i>
-              <p>KRS</p>
-            </a>
-          </li>
-          <!-- <li class="nav-item active-pro ">
-                <a class="nav-link" href="./upgrade.html">
-                    <i class="material-icons">unarchive</i>
-                    <p>Upgrade to PRO</p>
-                </a>
-            </li> -->
         </ul>
       </div>
     </div>
@@ -87,40 +169,7 @@
             <span class="navbar-toggler-icon icon-bar"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end">
-            <!-- <form class="navbar-form">
-              <div class="input-group no-border">
-                <input type="text" value="" class="form-control" placeholder="Search...">
-                <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                  <i class="material-icons">search</i>
-                  <div class="ripple-container"></div>
-                </button>
-              </div>
-            </form> -->
             <ul class="navbar-nav">
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="#pablo">
-                  <i class="material-icons">dashboard</i>
-                  <p class="d-lg-none d-md-block">
-                    Stats
-                  </p>
-                </a>
-              </li> -->
-              <!-- <li class="nav-item dropdown">
-                <a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="material-icons">notifications</i>
-                  <span class="notification">5</span>
-                  <p class="d-lg-none d-md-block">
-                    Some Actions
-                  </p>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Mike John responded to your email</a>
-                  <a class="dropdown-item" href="#">You have 5 new tasks</a>
-                  <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-                  <a class="dropdown-item" href="#">Another Notification</a>
-                  <a class="dropdown-item" href="#">Another One</a>
-                </div>
-              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="#pablo">
                   <i class="material-icons">person</i>
@@ -137,7 +186,7 @@
       <div class="content">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-lg-12 col-md-12">
+            <div class="col-md-12">
               <div class="card">
                 <div class="card-header card-header-tabs card-header-info">
                   <div class="nav-tabs-navigation">
@@ -162,12 +211,6 @@
                             <div class="ripple-container"></div>
                           </a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#krs" data-toggle="tab">
-                            <i class="material-icons">content_paste</i> KRS
-                            <div class="ripple-container"></div>
-                          </a>
-                        </li>
                       </ul>
                     </div>
                   </div>
@@ -178,42 +221,18 @@
                       <table class="table table-hover">
                           <thead class="text-info">
                               <th></th>
-                              <th>Full Information</th>
+                              <th colspan="3">Full Information</th>
                           </thead>
-                          <tbody>
-                            <tr>
-                              <td>
-                                <div class="form-check">
-                                  <label class="form-check-label">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    <span class="form-check-sign">
-                                      <span class="check"></span>
-                                    </span>
-                                  </label>
-                                </div>
-                              </td>
-                              <td>
-                                17.01.63.0005 Adham Hayukalbu / S1 Teknik Informatika
-                              </td>
-                              <td class="td-actions text-right">
-                                <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
-                                  <i class="material-icons">edit</i>
-                                </button>
-                                <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">
-                                  <i class="material-icons">close</i>
-                                </button>
-                              </td>
-                            </tr>
-                          </tbody>
+                          <tbody id="mhs_list_view"></tbody>
                         </table>
                     </div>
                     <div class="tab-pane" id="dosen">
                       <table class="table table-hover">
                           <thead class="text-info">
                               <th></th>
-                              <th>Full Information</th>
+                              <th colspan="3">Full Information</th>
                           </thead>
-                          <tbody>
+                          <tbody id="dsn_list_view">
                             <tr>
                               <td>
                                 <div class="form-check">
@@ -225,9 +244,7 @@
                                   </label>
                                 </div>
                               </td>
-                              <td>
-                                17.01.63.0005 Adham Hayukalbu / S1 Teknik Informatika
-                              </td>
+                              <td>Lines From Great Russian Literature? Or E-mails From My Boss?</td>
                               <td class="td-actions text-right">
                                 <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
                                   <i class="material-icons">edit</i>
@@ -238,72 +255,15 @@
                               </td>
                             </tr>
                           </tbody>
-                        </table>
+                      </table>
                   </div>
                   <div class="tab-pane" id="matakuliah">
                     <table class="table table-hover">
                         <thead class="text-info">
                             <th></th>
-                            <th>Full Information</th>
+                            <th colspan="3">Full Information</th>
                         </thead>
-                        <tbody>
-                          <tr>
-                            <td>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input class="form-check-input" type="checkbox" value="">
-                                  <span class="form-check-sign">
-                                    <span class="check"></span>
-                                  </span>
-                                </label>
-                              </div>
-                            </td>
-                            <td>
-                              17.01.63.0005 Adham Hayukalbu / S1 Teknik Informatika
-                            </td>
-                            <td class="td-actions text-right">
-                              <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
-                                <i class="material-icons">edit</i>
-                              </button>
-                              <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">
-                                <i class="material-icons">close</i>
-                              </button>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                    <div class="tab-pane" id="krs">
-                      <table class="table table-hover">
-                        <thead class="text-info">
-                            <th></th>
-                            <th>Full Information</th>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td>
-                              <div class="form-check">
-                                <label class="form-check-label">
-                                  <input class="form-check-input" type="checkbox" value="">
-                                  <span class="form-check-sign">
-                                    <span class="check"></span>
-                                  </span>
-                                </label>
-                              </div>
-                            </td>
-                            <td>
-                              17.01.63.0005 Adham Hayukalbu / S1 Teknik Informatika
-                            </td>
-                            <td class="td-actions text-right">
-                              <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
-                                <i class="material-icons">edit</i>
-                              </button>
-                              <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">
-                                <i class="material-icons">close</i>
-                              </button>
-                            </td>
-                          </tr>
-                        </tbody>
+                        <tbody id="matkul_list_view"></tbody>
                       </table>
                     </div>
                   </div>
@@ -339,38 +299,9 @@
               </li>
             </ul>
           </nav>
-          <!-- <div class="copyright float-right">
-            &copy;
-            <script>
-              document.write(new Date().getFullYear())
-            </script>
-          </div> -->
         </div>
       </footer>
     </div>
   </div>
-  <!--   Core JS Files   -->
-  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-  <!-- Chartist JS -->
-  <script src="assets/js/plugins/chartist.min.js"></script>
-  <!--  Notifications Plugin    -->
-  <script src="assets/js/plugins/bootstrap-notify.js"></script>
-  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
-  <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-  <!-- <script src="assets/demo/demo.js"></script> -->
-  <script>
-    $(document).ready(function() {
-      // Javascript method's body can be found in assets/js/demos.js
-      md.initDashboardPageCharts();
-
-    });
-  </script>
 </body>
-
 </html>
