--- a/appcordova/www/mahasiswa.html
+++ b/appcordova/www/mahasiswa.html
@@ -15,38 +15,46 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
   <link href="assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
-  <!-- <link href="assets/demo/demo.css" rel="stylesheet" /> -->
-  <script type="text/javascript">
+  <!--   Core JS Files   -->
+  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+  <script src="assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
+  <script>
     $(document).ready(function() {
-        $("#insert").click(function() {
-            var nim = $("#nim").val();
-            var name = $("#name").val();
-            var jurusan_id = $("#jurusan").val();
-            var dataString = "nim=" + nim + "&name=" + name + "&jurusan=" + jurusan_id + "";
-            if ($.trim(title).length > 0 & $.trim(duration).length > 0 & $.trim(price).length > 0) {
-                $.ajax({
-                    type: "POST",
-                    url: "https://dapoerdevelopment.000webhostapp.com/php-code/insert.php",
-                    data: dataString,
-                    crossDomain: true,
-                    cache: false,
-                    beforeSend: function() {
-                        $("#insert").val('Connecting...');
-                    },
-                    success: function(data) {
-                        if (data == "success") {
-                            alert("inserted");
-                            $("#insert").val('submit');
-                        } else if (data == "error") {
-                            alert("error");
-                        }
+      $("#insert").click(function() {
+        var nim = $("#nim").val();
+        var nama = $("#nama").val();
+        var jurusan_id = $("#jurusan_id").val();
+        var alamat = "";
+        var dataString = "nim=" + nim + "&nama=" + nama + "&jurusan_id=" + jurusan_id + "&alamat=" + alamat + "&insert=";
+        if ($.trim(nim).length > 0 & $.trim(nama).length > 0 & $.trim(jurusan_id).length > 0) {
+            $.ajax({
+                type: "POST",
+                url: "http://172.16.4.245/web-services/php-code/controllers/mahasiswa_controller.php",
+                data: dataString,
+                crossDomain: true,
+                cache: false,
+                beforeSend: function() {
+                    $("#insert").val('Connecting...');
+                },
+                success: function(data) {
+                    if (data == "success") {
+                        alert("Record is successfully created");
+                        $("#insert").val('Submit');
+                        $("#mahasiswa_form_view").find("input[type=text]").val("");
+                    } else if (data == "error") {
+                        $("#insert").val('Submit');
+                        alert("Error!");
                     }
-                });
-            }
-            return false;
-        });
+                }
+            });
+        }
+        return false;
+      });
     });
-    </script>
+  </script>
 </head>
 
 <body class="">
@@ -83,18 +91,6 @@
               <p>Mata Kuliahs</p>
             </a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./krs.html">
-              <i class="material-icons">content_paste</i>
-              <p>KRS</p>
-            </a>
-          </li>
-          <!-- <li class="nav-item active-pro ">
-                <a class="nav-link" href="./upgrade.html">
-                    <i class="material-icons">unarchive</i>
-                    <p>Upgrade to PRO</p>
-                </a>
-            </li> -->
         </ul>
       </div>
     </div>
@@ -137,37 +133,37 @@
       <div class="content">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-lg-12 col-md-12">
+            <div class="col-md-12">
               <div class="card">
                 <div class="card-header card-header-tabs card-header-info">
                     <h4 class="card-title">Mahasiswa</h4>
                 </div>
                 <div class="card-body">
-                    <form>
-                        <div class="row">
-                            <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="bmd-label-floating">NIM</label>
-                                <input id="nim" type="text" class="form-control">
-                            </div>
-                            </div>
-                            <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="bmd-label-floating">Nama Lengkap</label>
-                                <input id="name" type="text" class="form-control">
-                            </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                            <div class="form-group">
-                                <label class="bmd-label-floating">Jurusan</label>
-                                <input id="jurusan" type="text" class="form-control">
-                            </div>
-                            </div>
-                        </div>
-                        <button id="insert" type="submit" class="btn btn-info pull-right">Save</button>
-                        <div class="clearfix"></div>
+                    <form id="mahasiswa_form_view">
+                      <div class="row">
+                          <div class="col-md-3">
+                          <div class="form-group">
+                              <label class="bmd-label-floating">NIM</label>
+                              <input id="nim" type="text" class="form-control" required>
+                          </div>
+                          </div>
+                          <div class="col-md-9">
+                          <div class="form-group">
+                              <label class="bmd-label-floating">Nama Lengkap</label>
+                              <input id="nama" type="text" class="form-control">
+                          </div>
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="col-md-12">
+                          <div class="form-group">
+                              <label class="bmd-label-floating">Jurusan</label>
+                              <input id="jurusan_id" type="text" class="form-control">
+                          </div>
+                          </div>
+                      </div>
+                      <input id="insert" type="button" class="btn btn-info pull-right" value="Submit"/>
+                      <div class="clearfix"></div>
                     </form>
                 </div>
               </div>
@@ -211,28 +207,6 @@
       </footer>
     </div>
   </div>
-  <!--   Core JS Files   -->
-  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-  <!-- Chartist JS -->
-  <script src="assets/js/plugins/chartist.min.js"></script>
-  <!--  Notifications Plugin    -->
-  <script src="assets/js/plugins/bootstrap-notify.js"></script>
-  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
-  <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-  <!-- <script src="assets/demo/demo.js"></script> -->
-  <script>
-    $(document).ready(function() {
-      // Javascript method's body can be found in assets/js/demos.js
-      md.initDashboardPageCharts();
-
-    });
-  </script>
 </body>
 
 </html>
