--- a/appcordova/www/mata_kuliah.html
+++ b/appcordova/www/mata_kuliah.html
@@ -53,18 +53,6 @@
               <p>Mata Kuliahs</p>
             </a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./krs.html">
-              <i class="material-icons">content_paste</i>
-              <p>KRS</p>
-            </a>
-          </li>
-          <!-- <li class="nav-item active-pro ">
-                <a class="nav-link" href="./upgrade.html">
-                    <i class="material-icons">unarchive</i>
-                    <p>Upgrade to PRO</p>
-                </a>
-            </li> -->
         </ul>
       </div>
     </div>
@@ -115,13 +103,13 @@
                 <div class="card-body">
                     <form>
                         <div class="row">
-                            <div class="col-md-5">
+                            <div class="col-md-3">
                             <div class="form-group">
                                 <label class="bmd-label-floating">Kode Mata Kuliah</label>
                                 <input type="text" class="form-control" disabled>
                             </div>
                             </div>
-                            <div class="col-md-5">
+                            <div class="col-md-7">
                             <div class="form-group">
                                 <label class="bmd-label-floating">Nama Mata Kuliah</label>
                                 <input type="text" class="form-control">
@@ -191,24 +179,17 @@
   <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
   <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
   <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-  <!-- Chartist JS -->
-  <script src="assets/js/plugins/chartist.min.js"></script>
-  <!--  Notifications Plugin    -->
-  <script src="assets/js/plugins/bootstrap-notify.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
   <!-- <script src="assets/demo/demo.js"></script> -->
-  <script>
+  <!-- <script>
     $(document).ready(function() {
       // Javascript method's body can be found in assets/js/demos.js
       md.initDashboardPageCharts();
 
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
