--- a/appcordova/www/mata_kuliah.html
+++ b/appcordova/www/mata_kuliah.html
@@ -15,8 +15,144 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
   <link href="assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <!-- <link href="assets/demo/demo.css" rel="stylesheet" /> -->
+  <!--   Core JS Files   -->
+  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="assets/js/core/geturi.js" type="text/javascript"></script>
+  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+  <script src="assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
+  <script>
+    $(document).ready(function() {
+      function randomStr(m) {
+        var m = m || 9; s = '', r = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+        for (var i=0; i < m; i++) { s += r.charAt(Math.floor(Math.random()*r.length)); }
+        return s;
+      };
+
+      var reference = (typeof getUrlVars()["reference"] === 'undefined') ? false: decodeURI(getUrlVars()["reference"]);
+      var nama = (typeof getUrlVars()["nama"] === 'undefined') ? false: decodeURI(getUrlVars()["nama"]);
+      var sks = (typeof getUrlVars()["sks"] === 'undefined') ? false: decodeURI(getUrlVars()["sks"]);
+      var jurusan_id = (typeof getUrlVars()["jurusan_id"] === 'undefined') ? false: decodeURI(getUrlVars()["jurusan_id"]);
+
+      if(!reference){
+        $("#reference").val(randomStr(6));
+        $('#insert').show();
+        $('#update').hide();
+        $('#delete').hide();
+      }else{
+        $("#reference").val(reference);
+        $("#nama").val(nama);
+        $("#sks").val(sks);
+        $("#jurusan_id").val(jurusan_id);
+        $('#insert').hide();
+        $('#update').show();
+        $('#delete').show();
+      }
+
+      var url_res_jurusan = "http://localhost/web-services/php-code/controllers/jurusan_controller.php?action=read";
+      $.getJSON(url_res_jurusan, function(result) {
+          console.log(result);
+          $.each(result, function(i, field) {
+              var id = field.id;
+              var nama = field.nama;
+              var innerhtml = '<option value='+ id +'>' + nama + '</option>';
+              $("#jurusan_id").append(innerhtml);
+          });
+      });
+
+      $("#insert").click(function() {
+        var reference = $("#reference").val();
+        var nama = $("#nama").val();
+        var jurusan_id = $("#jurusan_id").val();
+        var sks = $("#sks").val();
+        var dataString = "reference=" + reference + "&nama=" + nama + "&jurusan_id=" + jurusan_id + "&sks=" + sks + "&insert=";
+        if ($.trim(reference).length > 0 & $.trim(nama).length > 0 & $.trim(jurusan_id).length > 0) {
+          console.log(dataString);
+          $.ajax({
+              type: "POST",
+              url: "http://localhost/web-services/php-code/controllers/matakuliah_controller.php",
+              data: dataString,
+              crossDomain: true,
+              cache: false,
+              beforeSend: function() {
+                  $("#insert").val('Connecting...');
+              },
+              success: function(data) {
+                  if (data == "success") {
+                      alert("Record is successfully created");
+                      $("#insert").val('Submit');
+                      $("#matakuliah_form_view").find("input[type=text]").val("");
+                  } else if (data == "error") {
+                      $("#insert").val('Submit');
+                      alert("Error!");
+                  }
+              }
+          });
+        }
+        return false;
+      });
+
+      $("#update").click(function() {
+        var reference = $("#reference").val();
+        var nama = $("#nama").val();
+        var sks = $("#sks").val();
+        var jurusan_id = $("#jurusan_id").val();
+        var dataString = "reference=" + reference + "&nama=" + nama + '&sks=' + sks + "&jurusan_id=" + jurusan_id + "&update=";
+        if ($.trim(reference).length > 0 & $.trim(nama).length > 0 & $.trim(jurusan_id).length > 0) {
+          $.ajax({
+              type: "POST",
+              url: "http://localhost/web-services/php-code/controllers/matakuliah_controller.php",
+              data: dataString,
+              crossDomain: true,
+              cache: false,
+              beforeSend: function() {
+                  $("#update").val('Connecting...');
+              },
+              success: function(data) {
+                  if (data == "success") {
+                      alert("Record has been updated");
+                      $("#update").val('Update');
+                      $("#matakuliah_form_view").find("input[type=text]").val("");
+                  } else if (data == "error") {
+                      $("#update").val('Update');
+                      alert("Error!");
+                  }
+              }
+          });
+        }
+        return false;
+      });
+
+      $("#delete").click(function() {
+        var reference = $("#reference").val();
+        var dataString = "&reference=" + reference;
+        if ($.trim(reference).length > 0) {
+          $.ajax({
+              type: "GET",
+              url: "http://localhost/web-services/php-code/controllers/matakuliah_controller.php?action=delete",
+              data: dataString,
+              crossDomain: true,
+              cache: false,
+              beforeSend: function() {
+                  $("#delete").val('Connecting...');
+              },
+              success: function(data) {
+                  if (data == "success") {
+                      alert("Record has been deleted");
+                      $("#delete").val('Delete');
+                      $("#matakuliah_form_view").find("input[type=text]").val("");
+                  } else if (data == "error") {
+                      $("#delete").val('Delete');
+                      alert("Error!");
+                  }
+              }
+          });
+        }
+        return false;
+      });
+    });
+  </script>
 </head>
 
 <body class="">
@@ -101,36 +237,40 @@
                     <h4 class="card-title">Mata Kuliah</h4>
                 </div>
                 <div class="card-body">
-                    <form>
+                    <form id="matakuliah_form_view">
                         <div class="row">
                             <div class="col-md-3">
                             <div class="form-group">
                                 <label class="bmd-label-floating">Kode Mata Kuliah</label>
-                                <input type="text" class="form-control" disabled>
+                                <input id="reference" type="text" class="form-control" disabled>
                             </div>
                             </div>
                             <div class="col-md-7">
                             <div class="form-group">
                                 <label class="bmd-label-floating">Nama Mata Kuliah</label>
-                                <input type="text" class="form-control">
+                                <input id="nama" type="text" class="form-control">
                             </div>
                             </div>
                             <div class="col-md-2">
                             <div class="form-group">
                                 <label class="bmd-label-floating">SKS</label>
-                                <input type="text" class="form-control">
+                                <input id="sks" type="text" class="form-control">
                             </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-12">
+                          <div class="col-md-12">
                             <div class="form-group">
                                 <label class="bmd-label-floating">Jurusan</label>
-                                <input type="text" class="form-control">
+                                <select class="form-control" id="jurusan_id">
+                                  <option selected>Choose...</option>
+                                </select>
                             </div>
-                            </div>
+                          </div>
                         </div>
-                        <button type="submit" class="btn btn-info pull-right">Save</button>
+                        <input id="insert" type="button" class="btn btn-info pull-right" value="Submit"/>
+                        <input id="delete" type="button" class="btn btn-danger pull-right" value="Delete"/>
+                        <input id="update" type="button" class="btn btn-info pull-right" value="Update"/>  
                         <div class="clearfix"></div>
                     </form>
                 </div>
@@ -165,31 +305,9 @@
               </li>
             </ul>
           </nav>
-          <!-- <div class="copyright float-right">
-            &copy;
-            <script>
-              document.write(new Date().getFullYear())
-            </script>
-          </div> -->
         </div>
       </footer>
     </div>
   </div>
-  <!--   Core JS Files   -->
-  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
-  <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-  <!-- <script src="assets/demo/demo.js"></script> -->
-  <!-- <script>
-    $(document).ready(function() {
-      // Javascript method's body can be found in assets/js/demos.js
-      md.initDashboardPageCharts();
-
-    });
-  </script> -->
 </body>
-
 </html>
