--- a/appcordova/www/index.html
+++ b/appcordova/www/index.html
@@ -22,7 +22,7 @@
   <script src="assets/js/material-dashboard.min.js" type="text/javascript"></script>
   <script type="text/javascript">
     $(document).ready(function() {
-      var url_mahasiswa = "http://172.16.4.245/web-services/php-code/controllers/mahasiswa_controller.php?action=read";
+      var url_mahasiswa = "http://localhost/web-services/php-code/controllers/mahasiswa_controller.php?action=read";
       $.getJSON(url_mahasiswa, function(result) {
           console.log(result);
           $.each(result, function(i, field) {
@@ -31,6 +31,7 @@
               var alamat = field.alamat;
               var id_jurusan = field.jurusan_id;
               var display_name = nim + " / " + nama + " / " + id_jurusan;
+              var update_url = 'mahasiswa.html?nim=' + nim + '&nama=' + nama + '&jurusan_id=' + id_jurusan;
               var table_body_str = '<tr><td><div class="form-check">\n'+
                 '<label class="form-check-label">\n'+
                   '<input class="form-check-input" type="checkbox" value="">\n'+
@@ -41,18 +42,18 @@
                 '</td>\n'+
                 '<td>' + display_name + '</td>\n'+
                 '<td class="td-actions text-right">\n'+
-                '<button type="button" rel="tooltip" title="Edit" class="btn btn-primary btn-link btn-sm">\n'+
+                '<a href="'+ update_url + '" type="button" rel="tooltip" title="Edit" class="btn btn-primary btn-link btn-sm">\n'+
                 '<i class="material-icons">edit</i>\n'+
-                '</button>\n'+
-                '<button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">\n'+
-                '<i class="material-icons">close</i>\n'+
-                '</button>\n'+
+                '</a>\n'+
+                // '<button onclick="'+ deleteQuery(dictvalue) + '" type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">\n'+
+                // '<i class="material-icons">close</i>\n'+
+                // '</button>\n'+
                 '</td>\n'+
                 '</tr>'
               $("#mhs_list_view").append(table_body_str);
           });
       });
-      var url_dosen = "http://172.16.4.245/web-services/php-code/controllers/dosen_controller.php?action=read";
+      var url_dosen = "http://localhost/web-services/php-code/controllers/dosen_controller.php?action=read";
       $.getJSON(url_dosen, function(result) {
           console.log(result);
           $.each(result, function(i, field) {
@@ -61,6 +62,7 @@
               var alamat = field.alamat;
               var id_jurusan = field.jurusan_id;
               var display_name = nid + " / " + nama + " / " + id_jurusan;
+              var update_url = 'dosen.html?nid=' + nid + '&nama=' + nama + '&jurusan_id=' + id_jurusan;
               var table_body_str = '<tr><td><div class="form-check">\n'+
                 '<label class="form-check-label">\n'+
                 '<input class="form-check-input" type="checkbox" value="">\n'+
@@ -69,21 +71,20 @@
                 '</label>\n'+
                 '</div>\n'+
                 '</td>\n'+
-                '<td>' + display_name +
-                '</td>\n'+
+                '<td>' + display_name + '</td>\n'+
                 '<td class="td-actions text-right">\n'+
-                '<button type="button" rel="tooltip" title="Edit" class="btn btn-primary btn-link btn-sm">\n'+
+                '<a href="'+ update_url + '" type="button" rel="tooltip" title="Edit" class="btn btn-primary btn-link btn-sm">\n'+
                 '<i class="material-icons">edit</i>\n'+
-                '</button>\n'+
-                '<button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">\n'+
-                '<i class="material-icons">close</i>\n'+
-                '</button>\n'+
+                '</a>\n'+
+                // '<button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">\n'+
+                // '<i class="material-icons">close</i>\n'+
+                // '</button>\n'+
                 '</td>\n'+
                 '</tr>'
               $("#dsn_list_view").append(table_body_str);
           });
       });
-      var url_matakuliah = "http://172.16.4.245/web-services/php-code/controllers/matakuliah_controller.php?action=read";
+      var url_matakuliah = "http://localhost/web-services/php-code/controllers/matakuliah_controller.php?action=read";
       $.getJSON(url_matakuliah, function(result) {
           console.log(result);
           $.each(result, function(i, field) {
@@ -92,6 +93,7 @@
               var sks = field.sks;
               var id_jurusan = field.jurusan_id;
               var display_name = reference + " / " + nama + " / " + sks + " / " + id_jurusan;
+              var update_url = 'mata_kuliah.html?reference=' + reference + '&nama=' + nama + '&sks=' + sks + '&jurusan_id=' + id_jurusan;
               var table_body_str = '<tr><td><div class="form-check">\n'+
                 '<label class="form-check-label">\n'+
                 '<input class="form-check-input" type="checkbox" value="">\n'+
@@ -100,15 +102,14 @@
                 '</label>\n'+
                 '</div>\n'+
                 '</td>\n'+
-                '<td>' + display_name +
-                '</td>\n'+
+                '<td>' + display_name + '</td>\n'+
                 '<td class="td-actions text-right">\n'+
-                '<button type="button" rel="tooltip" title="Edit" class="btn btn-primary btn-link btn-sm">\n'+
+                '<a href="'+ update_url + '" type="button" rel="tooltip" title="Edit" class="btn btn-primary btn-link btn-sm">\n'+
                 '<i class="material-icons">edit</i>\n'+
-                '</button>\n'+
-                '<button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">\n'+
-                '<i class="material-icons">close</i>\n'+
-                '</button>\n'+
+                '</a>\n'+
+                // '<button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">\n'+
+                // '<i class="material-icons">close</i>\n'+
+                // '</button>\n'+
                 '</td>\n'+
                 '</tr>'
               $("#matkul_list_view").append(table_body_str);
@@ -221,7 +222,7 @@
                       <table class="table table-hover">
                           <thead class="text-info">
                               <th></th>
-                              <th colspan="3">Full Information</th>
+                              <th colspan="2">Full Information</th>
                           </thead>
                           <tbody id="mhs_list_view"></tbody>
                         </table>
@@ -233,27 +234,6 @@
                               <th colspan="3">Full Information</th>
                           </thead>
                           <tbody id="dsn_list_view">
-                            <tr>
-                              <td>
-                                <div class="form-check">
-                                  <label class="form-check-label">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    <span class="form-check-sign">
-                                      <span class="check"></span>
-                                    </span>
-                                  </label>
-                                </div>
-                              </td>
-                              <td>Lines From Great Russian Literature? Or E-mails From My Boss?</td>
-                              <td class="td-actions text-right">
-                                <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
-                                  <i class="material-icons">edit</i>
-                                </button>
-                                <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-link btn-sm">
-                                  <i class="material-icons">close</i>
-                                </button>
-                              </td>
-                            </tr>
                           </tbody>
                       </table>
                   </div>
